--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -80,6 +80,7 @@ If the conditions are not met, then the sequencer will skip forward the given am
 * `0x05` = Not equal within Misc
 * `0x06` = Increment by Misc2 while less than.
 * `0x07` = Decrement by Misc2 while greater than.
+* `0x08` = Previous condition was false.
 
 ### Flags
 
