--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -1,4 +1,4 @@
-# The M2 format and the Music Declaration Language
+# The M2 format
 
 ## Background and rationale behind creating the M2/MDL formats
 
@@ -15,7 +15,33 @@
 
 Preimplementation versions included a human-readable version based on SDLang.
 
+# Magic bytes
+
+Every m2 file must begin with `MIDI2.0`, and a file version identifier byte (null for first initial version).
+
+# Binary chunk layout
+
+## Chunk header:
+
+`ID` = 8 bytes, ASCII characters, unused ones padded with nulls.
+
+`length` = 64 bit unsigned integer. Equals with the length of the chunk not counting header and footer.
+
+## Chunk footer:
+
+`checksum` = 4 bytes, CRC32 checksum of the chunk data. Not used if chunk length is zero.
+
 # Header format
+
+Identifier: `HEADER`
+
+## Binary layout
+
+* `timeFormatID` = 1 byte. 0 = miliseconds, 1 = microseconds, 2 = hnsecs, 3 = custom period based.
+* `timeFormatPeriod` = 3 bytes, unsigned integer, the period of which time format 3 is based on, zero in all other time formats.
+* `timeFormatRes` = 4 bytes, unsigned integer, the resolution of time format 3.
+* `deviceNum` = 2 bytes, number of valid devices excluding the sequencer.
+* `maxPattern` = 2 bytes, maximum number of patterns at once.
 
 # Command list
 
@@ -87,3 +113,12 @@ If the conditions are not met, then the sequencer will skip forward the given am
 * Bit 0: If set, next condition will be ANDed to the rest, OR-ed otherwise.
 * Bit 1: Toggles AND and OR into NAND and XOR respectively.
 * Bit 2: Priority flag, if high this and the next condition will have a higher priority in evaluation. Works as an analogue to brackets.
+ 
+## Inject pattern in parallel
+
+```
+[05]{Pattern ID: 24 bits}
+```
+
+Injects a pattern in parallel to the main song data. Cannot be used in patterns.
+
