--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -1,6 +1,6 @@
 # The M2 format
 
-## Background and rationale behind creating the M2/MDL formats
+## Background and rationale behind creating the M2 formats
 
 * There's no known MIDI 2.0 file formats.
 * Most other music command file formats also lack extensions for creating adaptive soundtracks.
@@ -42,6 +42,7 @@ Identifier: `HEADER`
 * `timeFormatRes` = 4 bytes, unsigned integer, the resolution of time format 3.
 * `deviceNum` = 2 bytes, number of valid devices excluding the sequencer.
 * `maxPattern` = 2 bytes, maximum number of patterns at once.
+* `patternNum` = 4 bytes, unsigned integer, total number of patterns.
 
 # Command list
 
