--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -237,9 +237,49 @@ Human-readable form:
 [oper] [RA] [RB] [RD]
 ```
 
+Does math or logic operations on registers. Note: RB is used as an intermediate value for binary shifts
+
 ### Possible operations:
 
 * 07/add: RA + RB = RD
 * 08/sub: RA - RB = RD
 * 09/mul: RA * RB = RD
 * 0a/div: RA / RB = RD
+* 0b/mod: RA % RB = RD
+* 0c/and: RA & RB = RD
+* 0d/or: RA | RB = RD
+* 0e/xor: RA ^ RB = RD
+* 0f/not: ~RA = RD
+* 10/lshi: RA<<[RB] = RD
+* 11/rshi: RA>>[RB] = RD
+* 12/rasi: RA>>>[RB] = RD
+* 13/adds: RA + RB = RD (signed)
+* 14/subs: RA - RB = RD (signed)
+* 15/muls: RA * RB = RD (signed)
+* 16/divs: RA / RB = RD (signed)
+* 17/lsh: RA<<RB = RD
+* 18/rsh: RA>>RB = RD
+* 19/ras: RA>>>RB = RD
+* 1a/mov: RA = RD
+ 
+## Compare operation
+
+Bytecode layout:
+```
+[1b]{cc}{RA}{RB}
+```
+Human-readable form:
+```
+cmpXX RA RB
+```
+
+Compares two registers, then shifts a bit into CR to the least significant position, 1 if true, 0 otherwise.
+
+### Condition codes
+
+* 01/eq: RA == RB
+* 02/ne: RA != RB
+* 03/gt: RA > RB
+* 04/ge: RA >= RB
+* 05/lt: RA < RB
+* 06/le: RA <= RB
