Reworking of the m2 format specification

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -14,7 +14,7 @@
 
 # Version history
 
-Preimplementation versions included:
+Pre-implementation versions included:
 * A human-readable version based on SDLang (dropped in favor of MML-like implementation).
 * A more complicated conditional jump system (dropped in favor of a simpler one using various operations to achieve the same effect).
 
@@ -22,7 +22,7 @@ Preimplementation versions included:
 
 Every m2 file must begin with `MIDI2.0`, and a file version identifier byte (zero for first initial version).
 
-# Notes on human-readable format
+# Human-readable format
 
 ## General rule
 
@@ -71,6 +71,134 @@ Anything put after a semicolon will be ignored until the end of the line.
 ## Number formats 
 
 Hexadecimal numbers are designated with an `0x` at the beginning, e.g. `0xff`. All numbers can be decimal separated with an underscore, e.g. `123_456_789`, `0xff_ee_dd_cc`
+
+# Human-readable MIDI commands
+
+Within the human-readable format, MIDI commands should be also described in either human readable format, or with macros, but the user can also describe them with `ump[]` instead. Note can be either a number, or a note descriptor.
+
+## Utility messages
+
+### No operation
+
+`midinoop [gr]`
+
+### JR Timestamp
+
+`timestamp [gr] [data]`
+
+### JR clock
+
+`clock [gr] [data]`
+
+## System Real Time and System Common messages
+
+`sysrt [gr] [status] [MIDI1.0 byte 2] [MIDI1.0 byte 3]`
+
+## Legacy (MIDI1.0) messages
+
+Note: In this mode, the upper nibble of channel numbers will set the group number.
+
+### Note off
+
+`m1_nf [ch] [note] [vel]`
+
+### Note on
+
+`m1_nn [ch] [note] [vel]`
+
+### Polyphonic Aftertouch
+
+`m1_ppres [ch] [note] [vel]`
+
+### Control change
+
+`m1_cc [ch] [index] [data]`
+
+### Program change
+
+`m1_pc [ch] [program]`
+
+### Channel Aftertouch
+
+`m1_cpres [ch] [data]`
+
+### Pitch bend
+
+`m1_pb [ch] [amount]`
+
+Note: Amount will be automatically separated upon parsing into two 7 bit halfs.
+
+## SysEx (7bit/MIDI1.0)
+
+`m1_sysex [gr] [status] [nr. of bytes] [bytes]...`
+
+## MIDI2.0 messages
+
+Note: In this mode, the upper nibble of channel numbers will set the group number.
+
+### Note off
+
+`nf [ch] [note] [vel] {[attrType]=attrVal}`
+
+### Note on
+
+`nn [ch] [note] [vel] {[attrType]=attrVal}`
+
+### Polyphonic Aftertouch
+
+`ppres [ch] [note] [vel]`
+
+### Registered Per-Note Controller Change
+
+`pccr [ch] [note] [index] [data]`
+
+### Assignable Per-Note Controller Change
+
+`pcca [ch] [note] [index] [data]`
+
+### Per-Note Management Message
+
+`pnoteman [ch] [note] [option]`
+
+### Control change (legacy)
+
+`ccl [ch] [index] [data]`
+
+### Control change (registered)
+
+`ccr [ch] [index] [data]`
+
+### Control change (assignable)
+
+`cc [ch] [index] [data]`
+
+### Relative Control change (registered)
+
+`rccr [ch] [index] [data]`
+
+### Relative Control change (assignable)
+
+`rcc [ch] [index] [data]`
+
+### Program change
+
+`pc [ch] [program] {bank=[banknum]}`
+
+### Channel Aftertouch
+
+`cpres [ch] [data]`
+
+### Pitch bend
+
+`pb [ch] [amount]`
+
+### Per-note pitch bend
+
+`ppb [ch] [note] [amount]`
+
+## SysEx (8bit/MIDI2.0)
+
+`sysex [gr] [status] [nr. of bytes] [stream ID] [bytes]...`
 
 # Binary chunk layout
 
@@ -283,3 +411,36 @@ Compares two registers, then shifts a bit into CR to the least significant posit
 * 04/ge: RA >= RB
 * 05/lt: RA < RB
 * 06/le: RA <= RB
+* 07/ze: RA == 0
+* 08/nz: RA != 0
+* 09/ne: RA < 0
+* 0a/po: RA > 0
+
+# Macros
+
+Macros are shorthand for complex commands and MIDI commands, and is only present in human readable form. Once translated, they'll be replaced with the appropriate commands instead.
+
+## Note playback
+
+```
+note [ch] [vel] [note and rhythm notations]
+note_adv [ch] [vel] [note and rhythm notations]
+```
+
+MIDI note, and with `note_adv`, optionally `wait` command macro. If needed, multiple notes can be grouped together on a single macro, separated with space. `note_adv` also inserts `wait` commands equal with the longest note, while also inserting note off commands.
+
+## Branching
+
+```
+if [condition list]
+    [...]
+elseif [condition list]     ;this is optional
+    [...]
+else                        ;this is optional
+    [...]
+end
+```
+
+Compile into numerous compare and jump statements.
+
+# Error and hazard handling strategies
