Getting m2 into a good enough state

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -244,6 +244,79 @@ Identifier: `HEADER`
 * `timeFormatID [fm]`: Format can be ms = miliseconds, us = microseconds, hns = hnsecs, fmt3, fmt4, fmt5
 * `timeFormatPeriod [int]`: Can be either a decimal or hexadecimal number as long as it's differentiated (see chapter on human readable format).
 
+# Other recognized chunks
+
+Note: User can implement custom chunks, but user chunks should be all lowercase letters to avoid collision with official ones. They still should be ended with all capital `END` in human-readable form.
+
+## Patterns
+
+Identifier: `PATTERN`
+
+*Binary layout:* Each pattern begin with a 32 bit identifier, of which only the 24 least significant bits are used, the rest are zeros. Then comes the binary data of the commands. The entry point is identified by `0x00_00_00_00`
+
+*Human-readable Layout:*
+```
+PATTERN [name]
+[...]
+END
+```
+The entry point is named `main`.
+
+## Metadata
+
+Identifier: `METADATA`
+
+*Binary Layout:* Contains UTF8 string pairs. Each string pair begins with one identifier length byte, then the text of the identifier, two bytes for the length of the content, then the content. Should be padded to be on the boundary of four bytes.
+
+*Human-readable Layout:*
+
+```
+METADATA
+[identifier]: "[content]"
+[...]
+END
+```
+
+## Device list
+
+Identifier `DEVLIST`
+
+*Binary Layout:* Each device entry consists of a 16 bit device ID, a byte for string length, and a UTF8 string.
+
+*Human-readable Layout:*
+
+```
+DEVLIST
+[devicename]: [devicenumber]
+END
+```
+
+# Virtual machine implementation
+
+## Registers
+
+For programmability, each pattern can access 128 local and 128 global registers as variables. As of this version, stack and heap allocation will be avoided to avoid allocating data in time-critical situations. First local register starts at 0, the last ends at 127. First global register starts at 128, the last ends at 255. All registers are 32 bits wide.
+
+Registers in human-readable form are notated with an `R`, then two hexadecimal numbers, e.g. `R7F`, `R53, RE0`.
+
+### Local registers
+
+Each pattern has its own register set for math and programmable control operations. Register #127 is the output for all the compare operations the pattern does, the rest of it are as of now general purpose, with registers #120-#126 can be reserved for non-general purpose use. 
+
+#### Compare register
+
+Register #127 (CR) is the target of all compare instruction result.
+
+```
+CR = (CR<<1) | (cmpXX is true ? 1 : 0)
+```
+
+Every time a compare instruction is being executed, the compare register shifts in a new bit to the lowest position. This enables the user to easily test for multiple conditions with minimal overhead.
+
+### Global registers
+
+To share data between each other, to allow global control of the song, etc., 128 global registers are provided. Registers #247-#255 can be reserved for non-general purpose use.
+
 # Command list
 
 ## null command
@@ -299,10 +372,12 @@ Bytecode layout:
 Human-readable format:
 
 ```
-e[DeviceID]: [MIDI command in one line]
+e[[DeviceID]]: [MIDI command in one line]
 ```
 
 Emits a given amount of words of MIDI data to the targeted device. If more needed, then more must be chained together. One command ideally should target a single device. Device 65535 is the sequencer, and can be used for things like settings. In human-readable form, each MIDI command is translated to a human-readable format (see chapter on human-readable format).
+
+In human-readable form, device ID is always between brackets, and either is a standard decimal or hexadecimal number, or a name.
 
 ## Conditional jump command
 
@@ -413,8 +488,59 @@ Compares two registers, then shifts a bit into CR to the least significant posit
 * 06/le: RA <= RB
 * 07/ze: RA == 0
 * 08/nz: RA != 0
-* 09/ne: RA < 0
+* 09/ng: RA < 0
 * 0a/po: RA > 0
+* 0b/sgt: RA > RB (signed)
+* 0c/sge: RA >= RB (signed)
+* 0d/slt: RA < RB (signed)
+* 0e/sle: RA <= RB (signed)
+
+## Abandon current pattern for another one
+
+Bytecode layout:
+```
+[1c]{Pattern ID: 24 bits}
+```
+Human readable form:
+```
+chain [patternName]
+```
+
+Referenced pattern will be played instead of the current one, with no returning.
+
+## Emit MIDI2.0 command with data from register
+
+Bytecode layout:
+```
+[1d]{Register data source: 8 bits}{Device: 16 bits}
+[1e]{00}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
+[1f]{Register data source: 8 bits}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
+```
+Human readable form:
+```
+e[[deviceID]]: [MIDI2.0 command with register number in data field]
+;or
+e[[deviceID]]: [MIDI2.0 command with register number in note or index field]
+;or
+e[[deviceID]]: [MIDI2.0 command with register number in note or index, and the data field]
+```
+
+Sends a single 64bit MIDI2.0 command, with the data, note, and/or index data being sourced from one or two registers.
+
+## Position marker
+
+Bytecode layout:
+```
+[20]{Position ID: 24 bits}
+```
+Human readable form:
+```
+marker [position ID: int]
+```
+
+Position marker. Normally, looping should be done through the programming of the file itself, but there might be situations, when this is not possible, or the application needs to jump immediately to a given position in the song. Care should be given for the virtual machine's state itself.
+
+Could be also useful to notify the sequencer host when a marker has been reached by the song.
 
 # Macros
 
@@ -442,5 +568,31 @@ end
 ```
 
 Compile into numerous compare and jump statements.
+
+## Position labels
+
+```
+@[name]
+```
+
+Labels a position for the `jmpXX` instruction.
+
+## Loops
+
+```
+while [condition list]
+    [...]
+end
+```
+
+Loops until the condition is true (checks at entry point).
+
+```
+do
+    [...]
+until [condition list]
+```
+
+Loops until the condition is true (checks at endpoint).
 
 # Error and hazard handling strategies
