Work on m2 documentation

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -542,6 +542,21 @@ Position marker. Normally, looping should be done through the programming of the
 
 Could be also useful to notify the sequencer host when a marker has been reached by the song.
 
+## Transposing
+
+Bytecode layout:
+```
+[21]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{unused: 14 bits}
+```
+Human readable form:
+```
+trnsps [group/channel] [device ID] [key/mode id] [amount: number or register]
+;or
+trnsps [group/channel] [device ID] reset
+```
+
+Sets the transposing for a channel of a device on all note commands, or clears it if the reset bit is high.
+
 # Macros
 
 Macros are shorthand for complex commands and MIDI commands, and is only present in human readable form. Once translated, they'll be replaced with the appropriate commands instead.
