Work on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -546,7 +546,7 @@ Could be also useful to notify the sequencer host when a marker has been reached
 
 Bytecode layout:
 ```
-[21]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{unused: 14 bits}
+[21]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{all channels except current: 1 bit}{unused: 13 bits}
 ```
 Human readable form:
 ```
@@ -556,6 +556,19 @@ trnsps [group/channel] [device ID] reset
 ```
 
 Sets the transposing for a channel of a device on all note commands, or clears it if the reset bit is high.
+
+## Display command
+
+Bytecode layout:
+```
+[ff]{command type: 8 bits}{command code: 16 bits} {Arbitrary amount of data depending on the former one}
+```
+Human readable form:
+```
+display [rest]
+```
+
+Display commands are mostly play significance in displaying stuff in editors, but some of them are play great significance in the human readable form.
 
 # Macros
 
