--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -372,7 +372,7 @@ Bytecode layout:
 Human-readable format:
 
 ```
-e[[DeviceID]]: [MIDI command in one line]
+$[[DeviceID]]: [MIDI command in one line]
 ```
 
 Emits a given amount of words of MIDI data to the targeted device. If more needed, then more must be chained together. One command ideally should target a single device. Device 65535 is the sequencer, and can be used for things like settings. In human-readable form, each MIDI command is translated to a human-readable format (see chapter on human-readable format).
@@ -469,7 +469,7 @@ Does math or logic operations on registers. Note: RB is used as an intermediate 
 
 Bytecode layout:
 ```
-[1b]{cc}{RA}{RB}
+[40]{cc}{RA}{RB}
 ```
 Human-readable form:
 ```
@@ -499,7 +499,7 @@ Compares two registers, then shifts a bit into CR to the least significant posit
 
 Bytecode layout:
 ```
-[1c]{Pattern ID: 24 bits}
+[41]{Pattern ID: 24 bits}
 ```
 Human readable form:
 ```
@@ -512,17 +512,17 @@ Referenced pattern will be played instead of the current one, with no returning.
 
 Bytecode layout:
 ```
-[1d]{Register data source: 8 bits}{Device: 16 bits}
-[1e]{00}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
-[1f]{Register data source: 8 bits}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
+[42]{Register data source: 8 bits}{Device: 16 bits}{32 bits of padding}
+[43]{00}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
+[44]{Register data source: 8 bits}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
 ```
 Human readable form:
 ```
-e[[deviceID]]: [MIDI2.0 command with register number in data field]
+$[[deviceID]]: [MIDI2.0 command with register number in data field]
 ;or
-e[[deviceID]]: [MIDI2.0 command with register number in note or index field]
+$[[deviceID]]: [MIDI2.0 command with register number in note or index field]
 ;or
-e[[deviceID]]: [MIDI2.0 command with register number in note or index, and the data field]
+$[[deviceID]]: [MIDI2.0 command with register number in note or index, and the data field]
 ```
 
 Sends a single 64bit MIDI2.0 command, with the data, note, and/or index data being sourced from one or two registers.
@@ -531,7 +531,7 @@ Sends a single 64bit MIDI2.0 command, with the data, note, and/or index data bei
 
 Bytecode layout:
 ```
-[20]{Position ID: 24 bits}
+[48]{Position ID: 24 bits}
 ```
 Human readable form:
 ```
@@ -546,7 +546,7 @@ Could be also useful to notify the sequencer host when a marker has been reached
 
 Bytecode layout:
 ```
-[21]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{all channels except current: 1 bit}{unused: 13 bits}
+[49]{group/channel: 8 bits}{device ID: 16 bits}{key/mode id: 8 bits}{amount: signed 8 bits/register num}{immediate/register toggle: 1 bit}{reset: 1 bit}{all channels except current: 1 bit}{unused: 13 bits}
 ```
 Human readable form:
 ```
