Work on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -20,7 +20,7 @@ Pre-implementation versions included:
 
 # Magic bytes
 
-Every m2 file must begin with `MIDI2.0`, and a file version identifier byte (zero for first initial version).
+Every binary m2 file must begin with `MIDI2.0`, and a file version identifier byte (zero for first initial version). Textual m2 files begin with `MIDI2.0 VER 1`, where `1` must be substituted with current version of the file.
 
 # Human-readable format
 
@@ -242,7 +242,9 @@ Identifier: `HEADER`
 ## Human readable format
 
 * `timeFormatID [fm]`: Format can be ms = miliseconds, us = microseconds, hns = hnsecs, fmt3, fmt4, fmt5
-* `timeFormatPeriod [int]`: Can be either a decimal or hexadecimal number as long as it's differentiated (see chapter on human readable format).
+* `timeFormatPeriod [int]`: Can be either a decimal or hexadecimal number as long as it's differentiated (see chapter on human readable format). Omitted in ms, us, hns modes.
+* `timeFormatRes [int]`: Time format resolution.
+* `maxPattern [int]`: Maximum number of patterns at once.
 
 # Other recognized chunks
 
