Work on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -32,10 +32,10 @@ Each line is simply ended with some CR-LF combination the OS use. Readers must m
 
 The note describing character sequence consists of 
 * a letter (case insensitive), 
-* a symbol (either `-`, `#`, or `b`),
-* one or more numbers (-1 and -2 octaves are symbolized as `00` and `000`)
+* a symbol (either `-` or `#`),
+* one or more numbers (-1 octave is symbolized as `00`)
 
-Examples: `c#000`, `d-5`, `Bb3`.
+Examples: `c#000`, `d-5`, `A#3`.
 
 ## Rhythm format 
 
