Work on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -40,7 +40,7 @@ Examples: `c#000`, `d-5`, `A#3`.
 ## Rhythm format 
 
 The rhythm describing character sequence consists of 
-* an optional number to describe triplets,
+* an optional number to describe tuplets,
 * one letter to describe note length,
 * one or more dots to describe dotted rhythm.
 
@@ -50,6 +50,7 @@ Multiple rhythms can be added together with the plus (`+`) symbol.
 * `w`: whole note.
 * `h`: half note.
 * `q`: quarter note.
+* `o`: eight note.
 * `s`: sixteenth note.
 * `t`: 32th note.
 * `i`: 64th note.
@@ -62,7 +63,7 @@ Examples: `w`, `h+s..`, `3q`, `5t.`
 
 Associating it with pitch in macros is done in the following ways:
 * A colon is used to directly assign a duration to a pitch: `w:c-4 h.:e-4 h..:g-4`.
-* A `~` symbol will assign it for all the notes in the current macro: `w~ c-4 e-4 g-4`
+* A `~` symbol will assign it for all the notes in the current macro: `~w c-4 e-4 g-4`
  
 ## Comments
 
@@ -182,7 +183,7 @@ Note: In this mode, the upper nibble of channel numbers will set the group numbe
 
 ### Program change
 
-`pc [ch] [program] {bank=[banknum]}`
+`pc [ch] [program] {banknum}`
 
 ### Channel Aftertouch
 
@@ -514,20 +515,14 @@ Referenced pattern will be played instead of the current one, with no returning.
 
 Bytecode layout:
 ```
-[42]{Register data source: 8 bits}{Device: 16 bits}{32 bits of padding}
-[43]{00}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
-[44]{Register data source: 8 bits}{Device: 16 bits}{Register note or identifier source: 8 bits}{24 bits of padding}
+[42]{Register data source: 8 bits}{Device: 16 bits}{Register note or identifier source: 8 bits}{Channel register identifier: 8 bits}{aux register: 8 bits}{4 bits padding}{D}{N}{C}{A}
 ```
 Human readable form:
 ```
-$[[deviceID]]: [MIDI2.0 command with register number in data field]
-;or
-$[[deviceID]]: [MIDI2.0 command with register number in note or index field]
-;or
-$[[deviceID]]: [MIDI2.0 command with register number in note or index, and the data field]
+$[[deviceID]]: [MIDI2.0 command with register number in note, index, data, or channel fields]
 ```
 
-Sends a single 64bit MIDI2.0 command, with the data, note, and/or index data being sourced from one or two registers.
+Sends a single 64bit MIDI2.0 command, with the data, note, and/or index data being sourced from one or two registers. At the very end, there's 4 bits which signal which registers are currently being used.
 
 ## Position marker
 
@@ -571,6 +566,10 @@ display [rest]
 ```
 
 Display commands are mostly play significance in displaying stuff in editors, but some of them are play great significance in the human readable form.
+
+### Command types
+
+#### Text displays
 
 # Macros
 
