Working on the M2 format

--- a/docs/formats/m2.md
+++ b/docs/formats/m2.md
@@ -571,6 +571,14 @@ Display commands are mostly play significance in displaying stuff in editors, bu
 
 #### Text displays
 
+Command type codes 0xF0 through 0xFE are reserved for string displays, and 0xFF is used for continuation of the previous block if more than 64kB of text is needed, and multiple ones can be chained together. Data must be aligned to 32 bit, with padding with zeros.
+
+Currently recognized text tags are:
+
+* `0xF0`/`strCue`: Cue text.
+* `0xF1`/`strNotation`: Notation text.
+* `0xF2`/`strLyrics`: Lyrics text.
+
 # Macros
 
 Macros are shorthand for complex commands and MIDI commands, and is only present in human readable form. Once translated, they'll be replaced with the appropriate commands instead.
